data/derived/fa15/progs/unify/prog3677.ml.out
Characters 62-65:
  let fixpoint (f,b) = wwhile (let fin (f, b) = (b, f b = b) in fin,b);;
                                                                ^^^
Error: This expression has type ('a -> 'a) * 'a -> 'a * bool
       but an expression was expected of type
         ('a -> 'a) * 'a -> (('a -> 'a) * 'a) * bool
       The type variable 'a occurs inside ('a -> 'a) * 'a
